--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,12 @@ base64 = "0.13.0"
 js-sys = "0.3.55"
 merlin = "3.0.0"
 rand_core = "0.6.3"
+secrecy = "0.8.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10.1"
 wasm-bindgen = "0.2.78"
+wasm-bindgen-futures = "0.4.28"
 web-sys = "0.3.55"
 yew = "0.19.3"
 yew-router = "0.16.0"
