--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "wasm-pack": "^0.10.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2"
+    "webpack-dev-server": "^4.7.2",
+    "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.0",
-    "copy-text-to-clipboard": "^3.0.1"
+    "copy-text-to-clipboard": "^3.0.1",
+    "workbox-precaching": "^6.4.2"
   }
 }
