--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:font": "node webpack/scripts/build-font.js",
     "build:web": "rimraf dist && webpack --mode production",
     "start": "webpack-dev-server --mode development",
-    "test": "wasm-pack test --headless",
+    "test": "npm-run-all test:*",
+    "test:js": "jest",
+    "test:wasm": "wasm-pack test --headless",
     "lint": "npm-run-all lint:*",
     "lint:js": "eslint webpack webpack.config.js",
     "lint:scss": "stylelint \"webpack/**.scss\"",
@@ -26,14 +28,20 @@
   },
   "homepage": "https://github.com/slowli/elastic-elgamal-site#readme",
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/plugin-transform-runtime": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
     "@wasm-tool/wasm-pack-plugin": "^1.6.0",
     "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.0",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "fantasticon": "^1.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.4.7",
+    "jest-environment-jsdom": "^27.4.6",
     "mini-css-extract-plugin": "^2.4.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.4",
@@ -51,6 +59,7 @@
     "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.16.7",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.0",
     "copy-text-to-clipboard": "^3.0.1",
