--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ wasm-opt = ["--strip-debug", "--enable-mutable-globals"]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-base64 = "0.13.0"
+base64ct = { version = "1.3.3", features = ["std"] }
 js-sys = "0.3.55"
 merlin = "3.0.0"
 rand_core = "0.6.3"
@@ -46,6 +46,7 @@ path = "../elastic-elgamal"
 features = ["serde"]
 
 [dev-dependencies]
+assert_matches = "1.5.0"
 wasm-bindgen-test = "0.3.28"
 
 [profile.release]
