--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ serde_json = "1.0"
 sha2 = "0.10.1"
 wasm-bindgen = "0.2.78"
 wasm-bindgen-futures = "0.4.28"
-web-sys = "0.3.55"
+web-sys = { version = "0.3.55", features = ["NodeList", "HtmlButtonElement"] }
 yew = "0.19.3"
 yew-router = "0.16.0"
 
@@ -48,6 +48,11 @@ features = ["serde"]
 [dev-dependencies]
 assert_matches = "1.5.0"
 wasm-bindgen-test = "0.3.28"
+
+[features]
+default = []
+# Enables functionality necessary for integration testing.
+testing = []
 
 [profile.release]
 panic = "abort"
