Add main dependencies to about page

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,11 @@ features = ["serde"]
 assert_matches = "1.5.0"
 wasm-bindgen-test = "0.3.28"
 
+[build-dependencies]
+regex = "1.5.4"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.5.8"
+
 [features]
 default = []
 # Enables functionality necessary for integration testing.
