--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elastic-elgamal-site",
+  "name": "elasticpoll-app",
   "version": "0.0.0",
   "private": true,
   "description": "Cryptographically secure polling web app",
