--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ features = ["serde"]
 
 [dev-dependencies]
 assert_matches = "1.5.0"
+rand = "0.8.4"
 wasm-bindgen-test = "0.3.28"
 
 [build-dependencies]
