--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "bootstrap-icons": "^1.7.0",
     "copy-text-to-clipboard": "^3.0.1",
     "workbox-precaching": "^6.4.2"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
