--- a/package.json
+++ b/package.json
@@ -19,47 +19,47 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/slowli/elastic-elgamal-site.git"
+    "url": "git+https://github.com/slowli/elasticpoll.app.git"
   },
   "author": "Alex Ostrovski <ostrovski.alex@gmail.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/slowli/elastic-elgamal-site/issues"
+    "url": "https://github.com/slowli/elasticpoll.app/issues"
   },
-  "homepage": "https://github.com/slowli/elastic-elgamal-site#readme",
+  "homepage": "https://github.com/slowli/elasticpoll.app#readme",
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
     "@wasm-tool/wasm-pack-plugin": "^1.6.0",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.7.1",
-    "eslint": "^8.12.0",
+    "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "fantasticon": "^1.2.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.0",
-    "jest-environment-jsdom": "^27.5.1",
+    "jest-environment-jsdom": "^28.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.4",
     "postcss-loader": "^6.2.0",
     "prerender-spa-plugin": "^3.4.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.49.11",
+    "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
-    "stylelint": "^14.6.1",
+    "stylelint": "^14.8.2",
     "stylelint-config-recommended-scss": "^6.0.0",
     "wasm-pack": "^0.10.1",
-    "webpack": "^5.70.0",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2",
+    "webpack-dev-server": "^4.9.0",
     "workbox-webpack-plugin": "^6.5.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.8",
+    "@babel/runtime": "^7.17.9",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
     "copy-text-to-clipboard": "^3.0.1",
