--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ js-sys = "0.3.55"
 merlin = "3.0.0"
 rand_core = "0.6.3"
 secrecy = "0.8.0"
+secret-tree = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10.1"
@@ -36,11 +37,6 @@ yew-router = "0.16.0"
 
 # Set up `getrandom` crate to use the host JS CSPRNG.
 getrandom = { version = "0.2", features = ["custom"] }
-
-[dependencies.secret-tree]
-version = "0.4.1"
-git = "https://github.com/slowli/secret-tree.git"
-rev = "06a15b15d14b1edad189e61840ca9f8c008848c5"
 
 [dependencies.elastic-elgamal]
 version = "0.2.0"
