--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,9 @@ secrecy = "0.8.0"
 secret-tree = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde-wasm-bindgen = "0.4.3"
 sha2 = "0.10.1"
-wasm-bindgen = "0.2.78"
+wasm-bindgen = "0.2.83"
 wasm-bindgen-futures = "0.4.28"
 web-sys = { version = "0.3.55", features = ["NodeList", "HtmlButtonElement"] }
 yew = "0.19.3"
