--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,8 @@ sha2 = "0.10.1"
 wasm-bindgen = "0.2.83"
 wasm-bindgen-futures = "0.4.28"
 web-sys = { version = "0.3.55", features = ["NodeList", "HtmlButtonElement"] }
-yew = "0.20.0"
-yew-router = "0.16.0"
+yew = { version = "0.20.0", features = ["csr"] }
+yew-router = "0.17.0"
 
 # Set up `getrandom` crate to use the host JS CSPRNG.
 getrandom = { version = "0.2", features = ["custom"] }
