--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ features = ["serde"]
 
 [dev-dependencies]
 assert_matches = "1.5.0"
+gloo-timers = { version = "0.2.5", features = ["futures"] }
 rand = "0.8.4"
 wasm-bindgen-test = "0.3.28"
 
