--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Cache cargo build
         uses: actions/cache@v3
@@ -25,10 +25,9 @@ jobs:
         with:
           node-version: 18.x
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
-          override: true
           components: rustfmt, clippy
       - name: Install wasm-pack
         uses: jetli/wasm-pack-action@v0.4.0
@@ -41,10 +40,7 @@ jobs:
       - name: Format Rust code
         run: "npm run lint:fmt"
       - name: Clippy
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features --all-targets -- -D warnings
+        run: cargo clippy --all-features --all-targets -- -D warnings
 
       # Tests
       - name: Test JS wrapper
