--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,15 +39,12 @@ yew-router = "0.17.0"
 # Set up `getrandom` crate to use the host JS CSPRNG.
 getrandom = { version = "0.2", features = ["custom"] }
 
-# Direct dependency just to force the choice of the backend.
-[dependencies.curve25519-dalek-ng]
-version = "4.1.1"
-features = ["u64_backend"]
-
 [dependencies.elastic-elgamal]
+git = "https://github.com/slowli/elastic-elgamal.git"
+rev = "1df41e2f05e15d7bccdd3bafd2704999bee4b285"
 version = "0.3.0-beta.1"
 default-features = false
-features = ["std", "curve25519-dalek-ng", "serde"]
+features = ["std", "curve25519-dalek", "serde"]
 
 [dev-dependencies]
 assert_matches = "1.5.0"
