--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,11 @@ jobs:
         uses: jetli/wasm-pack-action@v0.4.0
         with:
           version: latest
+      - name: Install cargo-deny
+        uses: baptiste0928/cargo-install@v2
+        with:
+          crate: cargo-deny
+          version: "^0.14"
 
       - run: npm ci
 
@@ -41,6 +46,8 @@ jobs:
         run: "npm run lint:fmt"
       - name: Clippy
         run: cargo clippy --all-features --all-targets -- -D warnings
+      - name: Check Rust dependencies
+        run: cargo deny check
 
       # Tests
       - name: Test JS wrapper
