--- a/deny.toml
+++ b/deny.toml
@@ -1,17 +1,13 @@
 # `cargo-deny` configuration.
 
+[output]
 feature-depth = 1
 
 [advisories]
 db-urls = ["https://github.com/rustsec/advisory-db"]
-vulnerability = "deny"
-unmaintained = "deny"
 yanked = "deny"
-notice = "warn"
-severity-threshold = "Medium"
 
 [licenses]
-unlicensed = "deny"
 allow = [
   # Permissive open-source licenses
   "MIT",
@@ -19,9 +15,6 @@ allow = [
   "BSD-3-Clause",
   "Unicode-DFS-2016",
 ]
-copyleft = "deny"
-allow-osi-fsf-free = "neither"
-default = "deny"
 confidence-threshold = 0.8
 
 [bans]
@@ -41,7 +34,3 @@ skip-tree = [
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
-allow-git = [
-  # Allow depending on a git version of the "main" dependency
-  "https://github.com/slowli/elastic-elgamal.git",
-]
