--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,6 @@ base64ct = { version = "1.6.0", features = ["std"] }
 js-sys = "0.3.70"
 merlin = "3.0.0"
 rand_core = "0.6.3"
-secrecy = "0.10.1"
-secret-tree = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde-wasm-bindgen = "0.6.5"
@@ -38,6 +36,11 @@ yew-router = "0.18.0"
 
 # Set up `getrandom` crate to use the host JS CSPRNG.
 getrandom = { version = "0.2", features = ["custom"] }
+
+[dependencies.secret-tree]
+version = "0.5.0"
+git = "https://github.com/slowli/secret-tree.git"
+rev = "848b955a310146fc5a2a8477e2baf26ebff6c6bc"
 
 [dependencies.elastic-elgamal]
 version = "0.3.0"
